Fix stars.png not showing up

--- a/css_custom_reset.css
+++ b/css_custom_reset.css
@@ -21,7 +21,7 @@ input[type="radio"] {
     -webkit-appearance: none;
     width: 27px;
     height: 27px;
-    background-image: url(../assets/stars.png);
+    background-image: url(stars.png);
     vertical-align: bottom;
 }
 
